--- a/views/loginform.ejs
+++ b/views/loginform.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/biolerplate") %>
-<body style="background-color: rgb(172, 36, 221);">
+<body class="login-bg-image" style="background-color: rgb(172, 36, 221);">
 
-    <div class="login-container">
+    <div class="login-container" style=" margin:2rem auto;">
       <div class="form-div">
         <h3 style=" margin-left:35%;   color:rgb(172, 36, 221);">Login</h3> 
         <form action="/homepage/login" method="post" novalidate class="needs-validation">
