--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -104,14 +104,14 @@
           </div>
 
           <!-- All orders -->
-       <div style="max-width: 1500px; margin:1rem auto;">
+       <div style="max-width: 1200px; margin:1rem auto;">
         <!-- <h2 class="mx-4">All orders</h2> -->
             <%for(order of Orders.orders){%>
          <a href="/homepage/signUp/<%=order._id%>/<%=Orders._id%>" style="text-decoration: none; color:black;">
-            <div class="orders-container" style="display:flex; justify-content: space-between; margin:0.5rem 0;padding:1rem; background-color:white;">
+            <div class="orders-container" style="display:flex; justify-content: space-between; margin:0.5rem 0;padding:1rem; background-color:white;border:1px solid grey; border-radius:8px;">
                 <!-- <button class="btn btn-primary col-8 offset-2 mb-3">OrderID: <%=order._id%></button> -->
                 <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; width:200px;">
-                    <p><img src="<%=order.orderImage%>" alt="image not loaded"  class="" style="height:3rem;"></p>
+                    <p><img src="<%=order.orderImage%>" alt="image not loaded"  class="" style="height:5rem; width:5rem; object-fit:contain;"></p>
                     <p style="color:rgb(22, 173, 22); font-size:large; font-weight:bold;"> <%=order.status%></p>
                 </div>
                 
@@ -127,7 +127,7 @@
           
                
                
-                <!-- <a href="/homepage/signUp/<%=Orders._id%>/cancelOrder/<%=order._id%>" class="btn btn-danger">Cancel Order</a> -->
+               
             </div>
          </a>
             <%}%>
