--- a/views/searches.ejs
+++ b/views/searches.ejs
@@ -158,43 +158,51 @@
  
     <% for(item of searchItem){%>
 
-    <div class=" search-container mb-5 " style=" display: flex; flex-direction:row;  position:relative; align-content:space-between; height:150px" >
-      <div class="m-2 search-container-first" >
-        <a href="/homepage/<%=item._id%>/showInfo"
-          ><img
-            src="<%=item.image%>"
-            class="card-img-top"
-            alt="..."
-            style="margin-top:50%;"
-            width="60px"
-            height="60px"
-        /></a>
-      </div>
-      
-      <div class="search-container-second" style="position:absolute; left:50%; margin-top:30px;">
-        <ul>
-          <li><h5 class="card-title"><%=item.title%></h5></li>
-          <li>&#8377;<%=item.price.toLocaleString("en-IN")%></li>
-          <li><%=item.description%></li>
+      <a href="/homepage/<%=item._id%>/showInfo" style="text-decoration: none; color:black;">
+        <div class=" search-container my-2" style=" display: flex; justify-content:space-around; max-width:1400px; margin:0 auto; border:1px solid grey; border-radius:8px; padding:1rem;background-color: white; " >
         
-        </ul>
-        
-       
-        <a
-          href="/homepage/signup"
-          class=""
-          style="background-color: rgb(172, 36, 221); color: white; padding:5px 10px; text-decoration: none; border-radius: 10px; margin-left:30px;"
-          >Add to Cart</a
-        >
-        
-      </div>
-    </div>
-    
+          <div class="m-2 search-container-first" style="width:50%; display:flex; justify-content:center; align-items:center; flex-direction: column;">
+            <img
+                src="<%=item.image%>"
+                class="card-img-top"
+                alt="..."
+               
+                width="120px"
+                height="120px"
+            />
+            <div class="rating-card" style="margin-top:0;">
+              <div class="stars">
+                <span class="star star1" data-value="1">&#9733;</span>
+                <span class="star star2" data-value="2">&#9733;</span>
+                <span class="star star3" data-value="3">&#9733;</span>
+                <span class="star star4" data-value="4">&#9733;</span>
+                <span class="star star5" data-value="5">&#9733;</span>
+               
+              </div>
+            
+            </div>
+          </div>
+          
+          <div class="search-container-second"  style="width:50%; margin:auto 0;">
+          
+            <ul>
+              <li><h5 class="card-title"><%=item.title%></h5></li>
+              <li><b style="font-size:large;">&#8377;<%=item.price.toLocaleString("en-IN")%></li></b>
+              <li><%=item.description%></li>
+               <li><%=item.specification%></li>
+            </ul>
+         
+           
+            
+            
+          </div>
+        </div>
+      </a>
     <%}%>
   
-  <a href="/homepage" class="btn btn-success col-6 offset-3 mt-4"
-    >Continue Shopping</a
-  >
+    <div style="display: flex; justify-content: center; align-items: center; margin-bottom:1rem;">
+      <a  style="padding:0.5rem 1rem; background-color: rgb(20, 146, 146);color:white;text-decoration:none;" href="/homepage" >Continue Shopping</a>
+  </div>
   <script>
     // hamberger-btn
     const hBtn = document.querySelector(".hamberger-btn");
