--- a/views/homepageCart.ejs
+++ b/views/homepageCart.ejs
@@ -1,4 +1,10 @@
 <% layout("/layouts/biolerplate") %>
+<style>
+    body 
+    {
+      background-color: white;
+    }
+</style>
 <body>
   <div style="max-width: 1000px; margin: 2rem auto">
     <div>
