--- a/views/errors.ejs
+++ b/views/errors.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/biolerplate") %>
-<div class="row">
-     <div class="alert alert-danger col-6 offset-3">
+<div style="max-width:1000px; margin:2rem auto;">
+     <div class="alert alert-danger">
         <h5><%=message%></h5>
      </div>
 </div>
