--- a/views/orderCancel.ejs
+++ b/views/orderCancel.ejs
@@ -108,6 +108,7 @@
         </div>
       </div>
   
+    <!-- order cancel info -->
     <div style="max-width:1000px; margin:2rem auto;">
         <div style="display: flex; justify-content: center; align-items: center;">
         <div  style="padding:2rem;">
