--- a/views/loginform.ejs
+++ b/views/loginform.ejs
@@ -1,5 +1,17 @@
 <% layout("/layouts/biolerplate") %>
-<body class="login-bg-image" style="background-color: rgb(172, 36, 221);">
+<style>
+   .login-bg-image
+  {
+    /* background-image: url("https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/2327ffa4-20e9-41b6-b77c-462d26f7bfea/d3ecbzg-045f95bb-8610-4dbb-84ab-e1d08fb037d7.jpg"); */
+    background-image: url("https://t3.ftcdn.net/jpg/03/55/60/70/360_F_355607062_zYMS8jaz4SfoykpWz5oViRVKL32IabTP.jpg");
+    height:100vh;
+    background-position: center;
+    background-repeat:no-repeat;
+    background-size: cover;
+    
+  }
+</style>
+<body class="login-bg-image" >
 
     <div class="login-container" style=" margin:2rem auto;">
       <div class="form-div">
