--- a/views/signupform.ejs
+++ b/views/signupform.ejs
@@ -1,5 +1,15 @@
 <% layout("/layouts/biolerplate") %>
-<body style="background-color: rgb(172, 36, 221);">
+
+<style>
+    .signUp-bg-img{
+      background-image: url("https://t3.ftcdn.net/jpg/03/55/60/70/360_F_355607062_zYMS8jaz4SfoykpWz5oViRVKL32IabTP.jpg");
+      height:100vh;
+      background-position: center;
+      background-repeat:no-repeat;
+      background-size: cover;
+    }
+</style>
+<body class="signUp-bg-img">
 
     <div class="login-container">
        <div class="form-div">
